# conways_game_of_life

./: README.md
src/: CMakeLists.txt  board.cpp  board.h  local_types.cpp  local_types.h  main.cpp  mainwindow.cpp  mainwindow.h
